Cannot use % in filenames #46531

Closed
opened 2015-10-18 17:50:59 +02:00 by Boris Chernov · 7 comments

When trying to save a file with, for example, "50%" in its name, it becomes "50_".

In recently solved #45900 it was said that symbols from this wiki article are now automatically replaced with underscore. I can understand why we replace something like "|", ">", etc. These symbols are not supported on Windows, so replacing them with underscore increases compatibility.

However, I think "%" symbol was included by mistake. That wiki article mentioned it because it was used for something in RT-11, but it is deprecated OS with even more deprecated file system with 6.3 file names (even worse than 8.3 format in DOS); also, it was flat file system with no support for subdirectories and it did not support many other common symbols. I do not think that limitations of RT-11 file system have any meaning for modern software including Blender.

Feel free to close as invalid if I'm wrong and there is actually a modern file system where "%" is not supported (in that case please tell what is it), otherwise please fix this.

When trying to save a file with, for example, "50%" in its name, it becomes "50_". In recently solved #45900 it was said that symbols from [this wiki article ](https://en.wikipedia.org/wiki/Filename#Reserved_characters_and_words) are now automatically replaced with underscore. I can understand why we replace something like "|", ">", etc. These symbols are not supported on Windows, so replacing them with underscore increases compatibility. However, I think "%" symbol was included by mistake. That wiki article mentioned it because it was used for something in RT-11, but it is deprecated OS with even more deprecated file system with 6.3 file names (even worse than 8.3 format in DOS); also, it was flat file system with no support for subdirectories and it did not support many other common symbols. I do not think that limitations of RT-11 file system have any meaning for modern software including Blender. Feel free to close as invalid if I'm wrong and there is actually a modern file system where "%" is not supported (in that case please tell what is it), otherwise please fix this.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Boris85

Added subscriber: @Boris85

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2015-10-18 18:45:21 +02:00

Yes… Looks like % is same case as space - one should not use it in filename, but they are not really forbidden nor dangerous, so we should not enforce that on user. Thanks for report, will fix.

Yes… Looks like % is same case as space - one should not use it in filename, but they are not really forbidden nor dangerous, so we should not enforce that on user. Thanks for report, will fix.

This issue was referenced by a25892543a

This issue was referenced by a25892543a7a81d6823c71d0bc54978b00e7a9b1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Thank you!

Thank you!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46531
No description provided.